--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
         <h4 class="center space">{{ site.location | upcase }}</h4>
         <h5 class="center">{{ page.date | date_to_long_string | upcase }}</h5>
 
-        <div class="threecol justify">
+        <div class="justify">
           {{ content }}
         </div>
 
