--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -13,5 +13,5 @@
       </div>
       {% cycle 'end row' : nil, nil, '</div>' %}
   {% endfor %}
-  <!-- {% cycle 'end row' : nil, '</div>', '</div>', '</div>' %} -->
+  {% cycle 'end row' : nil, '</div>', '</div>', '</div>' %}
 </div>
