Add new post and remove old post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 
     {% include nav.html %}
 
-    <main>
+    <main class='post-content'>
       <div class="container">
         <img src="{{ site.baseurl }}/assets/img/grunge.png" alt="" class="line">
         <p class="center">[&nbsp;N<sup>o</sup>{% for post in site.posts %}
