--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,4 +6,5 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/skeleton.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/normalize.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/native.css">
 {% include ga.html %}
