--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -6,7 +6,7 @@
       <div class="four columns">
         <a href="{{ site.baseurl }}{{ post.url }}" class="link">
         <h3>{{ post.title }}</h3>
-        <div class="justify">
+        <div>
           {% if post.abstract %}{{ post.abstract }}{% else %}{{ post.content | truncatewords:50 | strip_newlines }}{% endif %}
         </div>
         </a>
